force-app/main/default/objects/Job_Role__c/fields/Unable_to_Verify_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unable_to_Verify_Reason__c</fullName>
    <description>Reason role is determined as unable to verify</description>
    <inlineHelpText
  >Reason role is determined as unable to verify</inlineHelpText>
    <label>Unable to Verify Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unable to verify role online</fullName>
            </value>
            <value>
                <fullName>Role not found</fullName>
            </value>
            <value>
                <fullName>Role does not exist</fullName>
            </value>
            <value>
                <fullName>Role fulfilled by 3rd party</fullName>
            </value>
            <value>
                <fullName>Role in development stages</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>