force-app/main/default/objects/Job_Role__c/fields/Vacant_Role__c.field-meta.xml
<CustomField>
    <fullName>Vacant_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Temporary field that Process Builder uses to clear the contact lookup on a vacant job role.</description>
    <label>Vacant Role</label>
    <type>Checkbox</type>
</CustomField>