force-app/main/default/objects/Job_Role__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Verification_Date__c</field>
        <operation>equals</operation>
        <value>5/16/2018</value>
    </filters>
    <label>All</label>
</ListView>