force-app/main/default/objects/Job_Role__c/listViews/Copy_of_Verification_Queue.listView-meta.xml
<ListView>
    <fullName>Copy_of_Verification_Queue</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Job_Role_Mailing_State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Job_Role_Mailing_State__c</field>
        <operation>equals</operation>
    </filters>
    <label>Job Roles Missing Mailing State</label>
</ListView>