force-app/main/default/objects/Job_Role__c/listViews/Custom_Local_Chief_Data_Officers.listView-meta.xml
<ListView>
    <fullName>Custom_Local_Chief_Data_Officers</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>Verification_Date__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Job_Role_Title__c</columns>
    <columns>State_Details__c</columns>
    <columns>Contact_Status__c</columns>
    <columns>Account_Jurisdiction_Level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State_Details__c</field>
        <operation>includes</operation>
        <value>City Chief Data Officer,County Chief Data Officer</value>
    </filters>
    <filters>
        <field>Verification_Date__c</field>
        <operation>lessThan</operation>
        <value>7/23/2024</value>
    </filters>
    <filters>
        <field>Verification_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Custom - Local Chief Data Officers</label>
</ListView>