force-app/main/default/objects/Job_Role__c/listViews/Custom_Queue_State_Details_1.listView-meta.xml
<ListView>
    <fullName>Custom_Queue_State_Details_1</fullName>
    <booleanFilter>1 AND 2 AND 3 AND (4 OR 5)</booleanFilter>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Verification_Date__c</columns>
    <columns>Contact__c</columns>
    <columns>Job_Role_Title__c</columns>
    <columns>Job_Role_Mailing_State__c</columns>
    <columns>State_Details__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>State_Details__c</field>
        <operation>includes</operation>
        <value>Constitutional Officer,Governor&apos;s Cabinet Member</value>
    </filters>
    <filters>
        <field>Account_Jurisdiction_Level__c</field>
        <operation>equals</operation>
        <value>State,State Department</value>
    </filters>
    <filters>
        <field>Verification_Date__c</field>
        <operation>lessThan</operation>
        <value>8/31/2023</value>
    </filters>
    <filters>
        <field>Verification_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Custom Queue - GOV Mag Key Titles (old)</label>
</ListView>