force-app/main/default/objects/Job_Role__c/listViews/Education_Verification_K12.listView-meta.xml
<ListView>
    <fullName>Education_Verification_K12</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4 OR 5)</booleanFilter>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact_Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Job_Role_Title__c</columns>
    <columns>Department__c</columns>
    <columns>Job_Role_Email__c</columns>
    <columns>Job_Role_Phone_Number__c</columns>
    <columns>Job_Role_Phone_Number_Extension__c</columns>
    <columns>Job_Role_Mailing_Street__c</columns>
    <columns>Job_Role_Mailing_City__c</columns>
    <columns>Job_Role_Mailing_State__c</columns>
    <columns>Job_Role_Mailing_Zip_Code__c</columns>
    <columns>Verification_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Jurisdiction_Level__c</field>
        <operation>equals</operation>
        <value>K-12 Public School District</value>
    </filters>
    <filters>
        <field>Contact_Status__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </filters>
    <filters>
        <field>Department_Function__c</field>
        <operation>equals</operation>
        <value>Education</value>
    </filters>
    <label>Education Verification - K12</label>
</ListView>