force-app/main/default/objects/Job_Role__c/listViews/Need_Verification.listView-meta.xml
<ListView>
    <fullName>Need_Verification</fullName>
    <booleanFilter>(1 OR 5) AND (2 OR 6) AND 3 AND 4</booleanFilter>
    <columns>Verification_Date__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Job_Role_Title__c</columns>
    <columns>Account_Top_50_100_200__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Last_Verification_Date_Tier__c</field>
        <operation>notContain</operation>
        <value>01 - 0 - 90 days,02 - 91 - 180 days</value>
    </filters>
    <filters>
        <field>Account_Top_50_100_200__c</field>
        <operation>contains</operation>
        <value>50,100</value>
    </filters>
    <filters>
        <field>State_Details__c</field>
        <operation>includes</operation>
        <value>City CIO,County CIO</value>
    </filters>
    <filters>
        <field>Account_Jurisdiction_Level__c</field>
        <operation>equals</operation>
        <value>City,County,Consolidated</value>
    </filters>
    <filters>
        <field>Contact__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Parent_Account__c</field>
        <operation>equals</operation>
        <value
    >New York City - NY,Los Angeles County - CA,City of Los Angeles - CA,City of Chicago - IL</value>
    </filters>
    <label>Verification Queue - Top100 LocalGov CIO</label>
</ListView>