force-app/main/default/objects/Job_Role__c/listViews/Verification_Queue.listView-meta.xml
<ListView>
    <fullName>Verification_Queue</fullName>
    <booleanFilter>1 AND 2 AND 3</booleanFilter>
    <columns>Verification_Date__c</columns>
    <columns>Refresh_Date__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Job_Role_Title__c</columns>
    <columns>Job_Role_Mailing_State__c</columns>
    <columns>Queue__c</columns>
    <columns>Queue_Type__c</columns>
    <columns>Last_Verification_Date_Tier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Queue_Type__c</field>
        <operation>equals</operation>
        <value>Salesforce Queue</value>
    </filters>
    <filters>
        <field>Last_Verification_Date_Tier__c</field>
        <operation>equals</operation>
        <value>Unverified,365+ Days</value>
    </filters>
    <label>Verification Queue</label>
</ListView>